[package]
name = "slint"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
libc = "0.2"
slint = { version = "1.9", default-features = false, features = ["compat-1-2", "renderer-software", "libm", "unsafe-single-threaded"] }
nuttx = { git = "https://github.com/no1wudi/nuttx-rs.git", branch = "master" }

[build-dependencies]
slint-build = { version = "1.9" }
